[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.9"
nom = "7.1.3"
nom_locate = "4.2.0"
strum = { version = "0.25.0", features = ["derive"] }

[[bin]]
name = "day1"
path = "src/bin/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/day3.rs"
